# dataharvest

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/dataharvest/: __init__.py  base.py  main.py  schema.py
src/dataharvest/proxy/: base.py
src/dataharvest/purifier/: __init__.py  baidu_purifier.py  baijiahao_purifier.py  base.py  bilibili_purifier.py  common_purifier.py  purifier.py  qqnew_purifier.py  sll_purifier.py  sobaike_purifier.py  sogou_purifier.py  sohu_purifier.py  toutiao_purifier.py  wangyi_purifier.py  wechat_purifier.py  xiaohongshu_purifier.py
src/dataharvest/searcher/: __init__.py  base.py  sky_searcher.py  tavily_searcher.py
src/dataharvest/spider/: __init__.py  base.py  common_spider.py  mafengwo_spider.py  spider.py  ssl_spider.py  toutiao_spider.py  utils.py  xiaohongshu_spider.py  zhihu_spider.py
tests/: content.md  sobaike.md  test_pipline.py  test_proxy.py  test_purifiter.py  test_searcher.py  test_spider.py  xiaohongshu.md
